[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
version = "0.1.0"
description = "A small CLI tool to track work time and generate summaries."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
worklog = "worklog.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worklog*"]